# ValidationAgent

./: .gitignore  DEVELOPMENT_OPTIONS.md  IMPLEMENTATION_PLAN.md  README.md  ValidationsAgent.jcp  bluej.pkh  package.bluej
.github/workflows/: ci.yml
com/: bluej.pkg  bluej.pkh
com/tgp/: bluej.pkg  bluej.pkh
com/tgp/object/: DataObjectBase.ctxt  DataObjectBase.java  bluej.pkh  package.bluej
com/tgp/object/data/: AddressImpl.ctxt  AddressImpl.java  PersonImpl.ctxt  PersonImpl.java  PhoneImpl.ctxt  PhoneImpl.java  bluej.pkg  bluej.pkh
com/workflow/: package.bluej
com/workflow/client/: bluej.pkh
com/workflow/client/naf/: bluej.pkh
com/workflow/client/naf/validate/: BrokerControlImpl.ctxt  BrokerControlImpl.java  GenericValidationBufferImpl.ctxt  GenericValidationBufferImpl.java  PassListBase.ctxt  PassListBase.java  PassListImpl.ctxt  PassListImpl.java  PersonImpl.ctxt  PersonImpl.java  ShipmentHeaderImpl.ctxt  ShipmentHeaderImpl.java  TestClass.ctxt  TestClass.java  TestValidate.ctxt  TestValidate.java  TransModeImpl.ctxt  TransModeImpl.java  ValidateImpl.ctxt  ValidateImpl.java  bluej.pkh
copybook-toolkit/: CMakeLists.txt  DEVELOPMENT_LOG.md  DEVELOPMENT_OPTIONS.md  USER_GUIDE.md
copybook-toolkit/examples/copybooks/: ACCOUNT.cpy  BROKER-CONTROL.cpy  TRADE-RECORD.cpy
copybook-toolkit/examples/demo/: standalone_demo.cpp
copybook-toolkit/include/copybook/core/: field_descriptor.h  field_type.h  record_base.h  record_buffer.h
copybook-toolkit/include/copybook/parser/: codegen.h  copybook_parser.h
copybook-toolkit/include/copybook/serial/: json_serializer.h  yaml_serializer.h
copybook-toolkit/include/copybook/transport/: grpc_client.h  grpc_service.h  record_transport.h
copybook-toolkit/include/copybook/validation/: validation_engine.h  validation_rule.h
copybook-toolkit/proto/: copybook_service.proto
copybook-toolkit/src/core/: record_base.cpp  record_buffer.cpp
copybook-toolkit/src/parser/: codegen.cpp  copybook_parser.cpp
copybook-toolkit/src/serial/: json_serializer.cpp  yaml_serializer.cpp
copybook-toolkit/src/transport/: copybook_service.grpc.pb.cc  copybook_service.grpc.pb.h  copybook_service.pb.cc  copybook_service.pb.h  grpc_client.cpp  grpc_service.cpp  record_transport.cpp
copybook-toolkit/src/validation/: validation_engine.cpp
copybook-toolkit/test/: codegen_test.cpp  copybook_parser_test.cpp  integration_test.cpp  record_base_test.cpp  record_buffer_test.cpp  serializer_test.cpp  transport_test.cpp  validation_test.cpp
copybook-toolkit/test/data/: PERSON.cpy
copybook-toolkit/tools/: grpc_client_demo.cpp  grpc_server.cpp  test_harness.cpp
copybook-toolkit/tools/web_designer/: frontend.h  main.cpp
doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  index.html  logfile.txt  package-list
doc/com/tgp/object/: DataObjectBase.html  package-frame.html  package-summary.html
doc/com/tgp/object/data/: PersonImpl.html  package-frame.html  package-summary.html
